[project]
name = "ict2025-ds-greykite-mise-uv-template"
version = "0.1.0"
description = "ict2025-ds-greykite-mise-uv-template"
authors = [
  { name = "rarandeyo", email = "131662813+rarandeyo@users.noreply.github.com" },
]
readme = "README.md"
requires-python = "==3.10.15"
dependencies = [
  "anyio==4.11.0",
  'appnope==0.1.4; sys_platform == "darwin"',
  "argon2-cffi==25.1.0",
  "argon2-cffi-bindings==25.1.0",
  "arrow==1.3.0",
  "asttokens==3.0.0",
  "async-lru==2.0.5",
  "attrs==25.3.0",
  "babel==2.17.0",
  "beautifulsoup4==4.13.5",
  "bleach==6.2.0",
  "cached-property==1.5.2",
  "certifi==2025.8.3",
  "cffi==1.17.1",
  "charset-normalizer==3.4.3",
  "clarabel==0.11.1",
  "comm==0.2.3",
  "cvxpy==1.7.2",
  "debugpy==1.8.17",
  "decorator==5.2.1",
  "defusedxml==0.7.1",
  "ecos==2.0.14",
  "exceptiongroup==1.3.0",
  "executing==2.2.1",
  "fqdn==1.5.1",
  "h11==0.16.0",
  "h2==4.3.0",
  "hpack==4.1.0",
  "httpcore==1.0.9",
  "httpx==0.28.1",
  "hyperframe==6.1.0",
  "idna==3.10",
  "importlib-metadata==8.7.0",
  "ipykernel==6.30.1",
  "ipython==8.37.0",
  "isoduration==20.11.0",
  "jedi==0.19.2",
  "jinja2==3.1.6",
  "joblib==1.5.2",
  "json5==0.12.1",
  "jsonpointer==3.0.0",
  "jsonschema==4.25.1",
  "jsonschema-specifications==2025.9.1",
  "jupyter-lsp==2.3.0",
  "jupyter-client==8.6.3",
  "jupyter-core==5.8.1",
  "jupyter-events==0.12.0",
  "jupyter-server==2.17.0",
  "jupyter-server-terminals==0.5.3",
  "jupyterlab==4.4.7",
  "jupyterlab-pygments==0.3.0",
  "jupyterlab-server==2.27.3",
  "lark==1.3.0",
  "markupsafe==3.0.2",
  "matplotlib-inline==0.1.7",
  "mistune==3.1.4",
  "narwhals==2.5.0",
  "nbclient==0.10.2",
  "nbconvert==7.16.6",
  "nbformat==5.10.4",
  "nest-asyncio==1.6.0",
  "notebook-shim==0.2.4",
  "osqp==0.6.7.post3",
  "overrides==7.7.0",
  "packaging==25.0",
  "pandocfilters==1.5.0",
  "parso==0.8.5",
  "patsy==1.0.1",
  "pexpect==4.9.0",
  "pickleshare==0.7.5",
  "platformdirs==4.4.0",
  "plotly==6.3.0",
  "prometheus-client==0.23.1",
  "prompt-toolkit==3.0.52",
  "psutil==7.1.0",
  "ptyprocess==0.7.0",
  "pure_eval==0.2.3",
  "pycparser==2.22",
  "pygments==2.19.2",
  'pyobjc-core==11.0; sys_platform == "darwin"',
  'pyobjc-framework-Cocoa==11.0; sys_platform == "darwin"',
  "pysocks==1.7.1",
  "python-dateutil==2.9.0.post0",
  "python-json-logger==2.0.7",
  "tzdata==2025.2",
  "pytz==2025.2",
  "pyyaml==6.0.2",
  "pyzmq==27.1.0",
  "qdldl==0.1.7.post5",
  "referencing==0.36.2",
  "requests==2.32.5",
  "rfc3339-validator==0.1.4",
  "rfc3986-validator==0.1.1",
  "rfc3987-syntax==1.1.0",
  "rpds-py==0.27.1",
  "ruff==0.6.9",
  "scs==3.2.7.post2",
  "send2trash==1.8.3",
  "six==1.17.0",
  "sniffio==1.3.1",
  "soupsieve==2.8",
  "stack_data==0.6.3",
  "statsmodels==0.14.5",
  "terminado==0.18.1",
  "threadpoolctl==3.6.0",
  "tinycss2==1.4.0",
  "tomli==2.2.1",
  "tornado==6.5.2",
  "traitlets==5.14.3",
  "types-python-dateutil==2.9.0.20250822",
  "typing-utils==0.1.0",
  "uri-template==1.3.0",
  "urllib3==2.5.0",
  "wcwidth==0.2.14",
  "webcolors==24.11.1",
  "webencodings==0.5.1",
  "websocket-client==1.8.0",
  "zipp==3.23.0",
  "zstandard==0.25.0",
  "contourpy==1.3.2",
  "convertdate==2.4.0",
  "cycler==0.12.1",
  "dill==0.4.0",
  "ephem==4.2",
  "fonttools==4.60.0",
  "greykite==1.1.0",
  "hijri-converter==2.3.2.post1",
  "hijridate==2.3.0",
  "holidays==0.13",
  "holidays-ext==0.0.8",
  "iniconfig==2.1.0",
  "kiwisolver==1.4.9",
  "korean-lunar-calendar==0.3.1",
  "lunarcalendar-ext==0.0.1",
  "matplotlib==3.10.6",
  "numpy==1.26.0",
  "pandas==1.5.3",
  "pillow==11.3.0",
  "pluggy==1.6.0",
  "pymeeus==0.5.12",
  "pyparsing==3.2.5",
  "pytest==8.3.4",
  "scikit-learn==1.3.1",
  "scipy==1.15.1",
  "testfixtures==8.3.0",
  "tqdm==4.67.1",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
